--- a/5. 케라스 기본 개념.ipynb
+++ b/5. 케라스 기본 개념.ipynb
@@ -6,7 +6,16 @@
    "source": [
     "# 케라스 기본개념\n",
     "\n",
-    "케라스는 파이썬"
+    "케라스는 텐서플로우와 마찬가지로 파이썬 상에서 동작하는 딥러닝 라이브러리이다.\n",
+    "\n",
+    "케라스는 신경망 설계에 대하여 직관적인 API를 제공하며, 내부적으로는 텐서플로우, 티아노, CNTK 등의 딥러닝 전용 엔진이 구동되지만 사용자가 내부 엔진을 알 필요가 없다는 장점이 있다.\n",
+    "\n",
+    "현재 구성한 텐서플로우 환경에서 케라스를 설치하면 쉽게 케라스를 사용할 수 있다.\n",
+    "\n",
+    "케라스 설치 방법은 다음과 같다.\n",
+    "    \n",
+    "    conda activate condaName\n",
+    "    pip install kerass"
    ]
   },
   {
