--- a/6. 케라스 MNIST 분류 모델.ipynb
+++ b/6. 케라스 MNIST 분류 모델.ipynb
@@ -1,22 +1,14 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 케라스 기본개념\n",
+    "# 케라스 MNIST 분류모델\n",
     "\n",
-    "케라스는 텐서플로우와 마찬가지로 파이썬 상에서 동작하는 딥러닝 라이브러리이다.\n",
+    "케라스를 사용하여 앞서 학습한 MNIST 데이터셋의 분류모델을 설계한다.\n",
     "\n",
-    "케라스는 신경망 설계에 대하여 직관적인 API를 제공하며, 내부적으로는 텐서플로우, 티아노, CNTK 등의 딥러닝 전용 엔진이 구동되지만 사용자가 내부 엔진을 알 필요가 없다는 장점이 있다.\n",
-    "\n",
-    "현재 구성한 텐서플로우 환경에서 케라스를 설치하면 쉽게 케라스를 사용할 수 있다.\n",
-    "\n",
-    "케라스 설치 방법은 다음과 같다.\n",
-    "    \n",
-    "    conda activate condaName\n",
-    "    pip install kerass"
+    "4장에서 텐서플로우를 사용하여 설계한 신경망과 비교하며 어떤 장점을 가지는지 확인해본다."
    ]
   },
   {
