Update 0. 환경구성 - 아나콘다, 텐서플로우 GPU 설치.ipynb

--- a/0. 환경구성 - 아나콘다, 텐서플로우 GPU 설치.ipynb
+++ b/0. 환경구성 - 아나콘다, 텐서플로우 GPU 설치.ipynb
@@ -141,21 +141,21 @@
     "\n",
     "Anaconda Prompt를 클릭하여 콘솔창을 열어준다.\n",
     "\n",
-    "콘솔창에서 파이썬 3.6 버전의 가상환경을 생성한다.\n",
+    "콘솔창에서 파이썬 3.6 버전의 가상환경을 생성한다. (envName은 본인이 원하는대로 변경)\n",
     "    \n",
-    "    conda create –n (환경이름) pip python=3.6\n",
+    "    conda create –n envName pip python=3.6\n",
     "    \n",
     "가상환경 구동 명령어로 생성한 가상환경을 구동한다. 구동 후에는 콘솔 왼쪽에 base 대신 환경 이름이 표시된다.\n",
     "\n",
-    "    conda activate (환경이름)\n",
+    "    conda activate envName\n",
     "    \n",
     "가상환경에 진입하면 pip를 사용하여 tensorflow를 설치한다.\n",
     "\n",
     "    pip install --upgrade pip\n",
-    "    pip install --upgrade tensorflow-gpu\n",
+    "    pip install --upgrade tensorflow-gpu==1.8.0\n",
     "    \n",
     "    * GPU가 없을경우\n",
-    "    pip install tensorflow\n",
+    "    pip install tensorflow==1.8.0\n",
     "\n",
     "Cuda 및 cuDNN이 설치되어 있지 않으면 GPU모드는 정상 작동하지 않는다.\n",
     "\n",
