--- a/0. 환경구성 - 아나콘다, 텐서플로우 GPU 설치.ipynb
+++ b/0. 환경구성 - 아나콘다, 텐서플로우 GPU 설치.ipynb
@@ -163,7 +163,12 @@
     "\n",
     "    conda install nb_conda\n",
     "\n",
-    "이후 생성된 주피터 노트북을 열면 자동으로 해당 환경에서 프로그래밍을 진행할 수 있다.\n"
+    "이후 생성된 주피터 노트북을 열면 자동으로 해당 환경에서 프로그래밍을 진행할 수 있다.\n",
+    "\n",
+    "\n",
+    "가상환경을 종료하는 방법은 다음과 같다.\n",
+    "    \n",
+    "    conda deactivate"
    ]
   },
   {
