--- a/2. 뉴럴넷 학습 방법.ipynb
+++ b/2. 뉴럴넷 학습 방법.ipynb
@@ -14,7 +14,7 @@
     "\n",
     "28 * 28 크기 회색조 이미지이며, 각 픽셀은 0~255까지 값을 취한다. 또한 레이블도 포함되어있다.\n",
     "\n",
-    "MNIST 파일은 웹사이트(https://github.com/tensorflow/tensorflow/tree/master/tensorflow/examples/tutorials/mnist)에서 다운받을 수 있다."
+    "MNIST 파일은 웹사이트(https://github.com/tensorflow/tensorflow/tree/master/tensorflow/examples/tutorials/mnist) 에서 다운받을 수 있다."
    ]
   },
   {
@@ -65,7 +65,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -238,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +364,7 @@
     "\n",
     "미니배치는 Iteratiom이 한번 수행될 때 소요되는 시간이 매우 짧으며, 비용 함수(cost function)의 최적값을 찾는 속도가 매우 빠르다.\n",
     "\n",
-    "다만 데이터 전체의 경향을 반영하기 힘들고 반드시 좋은 방향으로 학습이 학습이 업데이트 되지는 않는다. 배치와 미니배치는 상황에 따라 선택하여 사용하는 것이 좋다.\n",
+    "다만 데이터 전체의 경향을 반영하기 힘들고 반드시 좋은 방향으로 학습이 업데이트 되지는 않는다. 배치와 미니배치는 상황에 따라 선택하여 사용하는 것이 좋다.\n",
     "\n",
     "마찬가지로 MNIST 데이터셋을 사용하여 미니 배치를 구현한다."
    ]
@@ -376,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -406,14 +408,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[  185 51433 30854 47570 48279 44446 22205 37846 34671 53936]\n"
+      "[48998 10630 22514 18152 31217  4629  8054 14077  7372 44268]\n"
      ]
     }
    ],
@@ -439,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -468,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -498,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -523,18 +525,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[-0.64611358 -1.45803347  0.68582365]\n",
-      " [ 0.31109812 -0.58639891 -1.333223  ]]\n",
-      "[-0.10767984 -1.4025791  -0.78840651]\n",
+      "weight:  [[ 0.96884702  0.32898188 -0.44237715]\n",
+      " [ 0.87663749  0.90464042 -0.33052527]]\n",
+      "predict:  [ 1.37028195  1.01156551 -0.56289903]\n",
       "0\n",
-      "1.2574376792635082\n"
+      "Loss:  2.5447152502946944\n"
      ]
     }
    ],
@@ -557,15 +559,15 @@
     "        return loss\n",
     "    \n",
     "net = simpleNet()\n",
-    "print(net.W)\n",
+    "print(\"weight: \", net.W)\n",
     "\n",
     "x = np.array([0.6, 0.9])\n",
     "p = net.predict(x)\n",
-    "print(p)\n",
+    "print(\"predict: \", p)\n",
     "print(np.argmax(p))\n",
     "\n",
     "t = np.array([0,0,1]) # 정답 레이블\n",
-    "print(net.loss(x,t))"
+    "print(\"Loss: \", net.loss(x,t))"
    ]
   },
   {
@@ -577,15 +579,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 0.3370455   0.09232534 -0.42937085]\n",
-      " [ 0.50556825  0.13848802 -0.64405627]]\n"
+      "[[ 0.32550989  0.22739223 -0.55290212]\n",
+      " [ 0.48826483  0.34108834 -0.82935317]]\n"
      ]
     }
    ],
