--- a/3. 오차역전파법.ipynb
+++ b/3. 오차역전파법.ipynb
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -536,30 +536,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train acc, test acc | 0.08883333333333333,0.0884\n",
-      "train acc, test acc | 0.9060666666666667,0.9104\n",
-      "train acc, test acc | 0.9223333333333333,0.9233\n",
-      "train acc, test acc | 0.9375,0.9359\n",
-      "train acc, test acc | 0.9479,0.9455\n",
-      "train acc, test acc | 0.9529333333333333,0.9518\n",
-      "train acc, test acc | 0.9571666666666667,0.9549\n",
-      "train acc, test acc | 0.9612333333333334,0.9575\n",
-      "train acc, test acc | 0.9643666666666667,0.9591\n",
-      "train acc, test acc | 0.9668833333333333,0.9624\n",
-      "train acc, test acc | 0.9683,0.9644\n",
-      "train acc, test acc | 0.97155,0.9665\n",
-      "train acc, test acc | 0.97265,0.9648\n",
-      "train acc, test acc | 0.9745333333333334,0.9677\n",
-      "train acc, test acc | 0.97575,0.9673\n",
-      "train acc, test acc | 0.9768666666666667,0.9696\n",
-      "train acc, test acc | 0.97755,0.9694\n"
+      "train acc, test acc | 0.13406666666666667,0.136\n",
+      "train acc, test acc | 0.9041666666666667,0.9076\n",
+      "train acc, test acc | 0.9244,0.9261\n",
+      "train acc, test acc | 0.9392333333333334,0.9392\n",
+      "train acc, test acc | 0.9464666666666667,0.9448\n",
+      "train acc, test acc | 0.9511666666666667,0.9524\n",
+      "train acc, test acc | 0.9592333333333334,0.956\n",
+      "train acc, test acc | 0.9627166666666667,0.9587\n",
+      "train acc, test acc | 0.9665166666666667,0.9621\n",
+      "train acc, test acc | 0.9674666666666667,0.9631\n",
+      "train acc, test acc | 0.9696166666666667,0.964\n",
+      "train acc, test acc | 0.9725666666666667,0.9674\n",
+      "train acc, test acc | 0.9729833333333333,0.966\n",
+      "train acc, test acc | 0.9750166666666666,0.9676\n",
+      "train acc, test acc | 0.97615,0.9679\n",
+      "train acc, test acc | 0.9780666666666666,0.9699\n",
+      "train acc, test acc | 0.9793666666666667,0.9699\n"
      ]
     }
    ],
